--- a/days/w2d1/w2d1.ipynb
+++ b/days/w2d1/w2d1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +33,8 @@
     "import torch.nn.functional as F\n",
     "from torch import einsum\n",
     "from einops import rearrange, reduce, repeat\n",
-    "import bert_tests"
+    "import bert_tests\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -36,18 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: 0.002831 STD: 0.1025 VALS [-0.03379 -0.003013 -0.1524 0.1516 -0.2043 0.173 0.05649 0.07717 0.01896 0.1144...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def raw_attention_pattern(\n",
     "    token_activations: t.Tensor,\n",
@@ -73,23 +74,14 @@
     "    return einsum(\"bhid, bhjd -> bhij\", keys, queries) / t.sqrt(head_size)\n",
     "\n",
     "\n",
-    "bert_tests.test_attention_pattern_fn(raw_attention_pattern)\n"
+    "# bert_tests.test_attention_pattern_fn(raw_attention_pattern)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 0.003566 STD: 0.1166 VALS [0.05987 0.1762 -0.03046 0.03423 0.07852 0.1562 -0.2229 0.1216 0.1179 -0.007553...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bert_attention(\n",
     "    token_activations: t.Tensor,\n",
@@ -118,23 +110,14 @@
     "    return project_output(concatenated)\n",
     "\n",
     "\n",
-    "bert_tests.test_attention_fn(bert_attention)\n"
+    "# bert_tests.test_attention_fn(bert_attention)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -0.001554 STD: 0.1736 VALS [-0.08316 -0.09165 -0.03188 -0.03013 0.1001 0.09549 -0.1046 0.07742 0.0424 0.05553...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MultiHeadedSelfAttention(nn.Module):\n",
     "    def __init__(\n",
@@ -190,25 +173,14 @@
     "        )\n",
     "\n",
     "\n",
-    "bert_tests.test_bert_attention(MultiHeadedSelfAttention)\n"
+    "# bert_tests.test_bert_attention(MultiHeadedSelfAttention)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([10, 117, 2])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mhsa = MultiHeadedSelfAttention(\n",
     "    num_heads=17,\n",
@@ -217,7 +189,7 @@
     "    per_head_output_dim=89,\n",
     "    output_dim=2,\n",
     ")\n",
-    "mhsa(t.ones((10, 117, 768))).shape\n"
+    "# mhsa(t.ones((10, 117, 768))).shape\n"
    ]
   },
   {
@@ -229,18 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert mlp MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -0.002065 STD: 0.1061 VALS [0.0343 -0.03701 0.02609 0.009201 -0.07531 -0.07379 0.04684 -0.08373 0.006134 -0.1191...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bert_mlp(\n",
     "    token_activations: t.Tensor,\n",
@@ -258,12 +221,12 @@
     "    return x\n",
     "\n",
     "\n",
-    "bert_tests.test_bert_mlp(bert_mlp)\n"
+    "# bert_tests.test_bert_mlp(bert_mlp)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,18 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "layer norm MATCH!!!!!!!!\n",
-      " SHAPE (20, 10) MEAN: -4.768e-09 STD: 1.003 VALS [-0.3893 -1.309 1.483 0.3582 0.4961 0.1515 -1.697 -0.7905 1.395 0.3024...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class LayerNorm(nn.Module):\n",
     "    def __init__(self, normalized_dim: int, eps=1e-5):\n",
@@ -310,23 +264,14 @@
     "        return input * self.weight + self.bias\n",
     "\n",
     "\n",
-    "bert_tests.test_layer_norm(LayerNorm)"
+    "# bert_tests.test_layer_norm(LayerNorm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -5.381e-09 STD: 1 VALS [0.007132 -0.04372 0.6502 -0.5972 -1.097 0.7267 0.1275 -0.6035 -0.2226 0.2145...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BertBlock(nn.Module):\n",
     "    def __init__(\n",
@@ -347,7 +292,7 @@
     "        x1 = self.ln1(self.mha(input) + input)\n",
     "        return self.ln2(self.dropout(self.bmlp(x1)) + x1)\n",
     "\n",
-    "bert_tests.test_bert_block(BertBlock)"
+    "# bert_tests.test_bert_block(BertBlock)"
    ]
   },
   {
@@ -359,37 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input_ids': [[101, 8667, 117, 146, 1821, 170, 5650, 119, 102]], 'token_type_ids': [[0, 0, 0, 0, 0, 0, 0, 0, 0]], 'attention_mask': [[1, 1, 1, 1, 1, 1, 1, 1, 1]]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import transformers\n",
-    "tokenizer = transformers.AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
-    "print(tokenizer(['Hello, I am a sentence.']))"
+    "# import transformers\n",
+    "# tokenizer = transformers.AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
+    "# print(tokenizer(['Hello, I am a sentence.']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 5) MEAN: -0.06748 STD: 1.062 VALS [1.176 -0.1914 0.8212 1.047 -0.481 0.7106 -1.304 -1.307 -0.438 -0.2764...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Embedding(nn.Module):\n",
     "    def __init__(self, vocab_size: int, embed_size: int):\n",
@@ -403,23 +331,14 @@
     "        \"\"\"\n",
     "        return self.embedding[input]\n",
     "\n",
-    "bert_tests.test_embedding(Embedding)\n"
+    "# bert_tests.test_embedding(Embedding)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 8.278e-10 STD: 1 VALS [-1.319 -0.4378 -2.074 0.9679 0.9274 1.479 -0.501 -1.9 -0.212 0.7961...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bert_embedding(\n",
     "    input_ids: t.Tensor,  # [batch, seqlen]\n",
@@ -439,23 +358,14 @@
     "\n",
     "    return dropout(layer_norm(inputs + tokens + positions))\n",
     "\n",
-    "bert_tests.test_bert_embedding_fn(bert_embedding)\n"
+    "# bert_tests.test_bert_embedding_fn(bert_embedding)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 2.07e-10 STD: 1 VALS [-0.009385 -0.4919 0.9852 -0.3535 -3.624 1.333 1.163 1.449 1.063 0.246...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BertEmbedding(nn.Module):\n",
     "    def __init__(\n",
@@ -486,7 +396,7 @@
     "        )\n",
     "\n",
     "\n",
-    "bert_tests.test_bert_embedding(BertEmbedding)\n"
+    "# bert_tests.test_bert_embedding(BertEmbedding)\n"
    ]
   },
   {
@@ -498,18 +408,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert MATCH!!!!!!!!\n",
-      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Bert(nn.Module):\n",
     "    def __init__(\n",
@@ -568,7 +469,7 @@
     "        return self.lm_head(self.transformer(embed))\n",
     "\n",
     "\n",
-    "bert_tests.test_bert(Bert)\n"
+    "# bert_tests.test_bert(Bert)\n"
    ]
   },
   {
@@ -580,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -608,10 +509,6 @@
     "        return input * self.weight + self.bias\n",
     "\n",
     "\n",
-    "N = 5\n",
-    "torchs = nn.LayerNorm(N, eps=1e-5)\n",
-    "ours = LayerNorm(N)\n",
-    "exp = ExperimentalLayerNorm(N, eps=1e-5)\n",
     "\n",
     "\n",
     "def get_grad(layernorm):\n",
@@ -622,10 +519,15 @@
     "\n",
     "    return input.grad\n",
     "\n",
+    "if __name__ == '__main__':\n",
+    "    N = 5\n",
+    "    torchs = nn.LayerNorm(N, eps=1e-5)\n",
+    "    ours = LayerNorm(N)\n",
+    "    exp = ExperimentalLayerNorm(N, eps=1e-5)\n",
     "\n",
-    "print(get_grad(torchs))\n",
-    "print(get_grad(ours))\n",
-    "print(get_grad(exp))\n"
+    "    print(get_grad(torchs))\n",
+    "    print(get_grad(ours))\n",
+    "    print(get_grad(exp))\n"
    ]
   },
   {
@@ -637,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -648,31 +550,14 @@
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
-    }
-   ],
-   "source": [
-    "my_bert = Bert(\n",
-    "    vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
-    "    type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
-    "    num_heads=12, num_layers=12\n",
-    ")\n",
-    "pretrained_bert = bert_tests.get_pretrained_bert()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comparing Berts MATCH!!!!!!!!\n",
+      " SHAPE (10, 20, 28996) MEAN: -2.834 STD: 2.475 VALS [-5.684 -6.157 -6.036 -6.633 -6.322 -6.318 -6.175 -6.384 -6.503 -6.367...]\n"
+     ]
     }
    ],
    "source": [
@@ -725,26 +610,23 @@
     "    return {transform_key(k): v for k, v in hf_dict.items() if include_key(k)}\n",
     "\n",
     "\n",
-    "my_bert.load_state_dict(hf_to_our_state_dict(pretrained_bert.state_dict()))\n"
+    "if __name__ == '__main__':\n",
+    "    my_bert = Bert(\n",
+    "        vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
+    "        type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
+    "        num_heads=12, num_layers=12\n",
+    "    )\n",
+    "    pretrained_bert = bert_tests.get_pretrained_bert()\n",
+    "    my_bert.load_state_dict(hf_to_our_state_dict(pretrained_bert.state_dict()))\n",
+    "    bert_tests.test_same_output(my_bert, pretrained_bert, tol=1e-4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comparing Berts MATCH!!!!!!!!\n",
-      " SHAPE (10, 20, 28996) MEAN: -2.732 STD: 2.413 VALS [-5.65 -6.041 -6.096 -6.062 -5.946 -5.777 -5.977 -6.015 -6.028 -5.935...]\n"
-     ]
-    }
-   ],
-   "source": [
-    "bert_tests.test_same_output(my_bert, pretrained_bert, tol=1e-4)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
